--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                     <h2>Get Your Cash Offer Today</h2>
                     <p>Takes 60 seconds — we'll call you within 24 hours</p>
                 </div>
-                <form id="leadForm" action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+                <form id="leadForm" action="https://formspree.io/f/mzdadyqb" method="POST">
                     <div class="form-row">
                         <div class="form-group">
                             <label>First Name</label>
